--- a/ios/EvisaPhotoPicker/Info.plist
+++ b/ios/EvisaPhotoPicker/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>CameraImageCropPicker needs access to your Library.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>CameraVision needs access to your Camera.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
