--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.18",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.3",
+    "react-native-image-crop-picker": "0.41.2",
+    "react-native-reanimated": "3.15.4",
+    "react-native-safe-area-context": "4.11.0",
+    "react-native-screens": "3.34.0",
+    "react-native-svg": "15.7.1",
+    "react-native-vision-camera": "4.5.3",
+    "react-native-worklets-core": "1.3.3",
+    "vision-camera-cropper": "1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
